Made whole project structure with hexagonal architecture. Added ExerciseController and UserController. Added simple token based authentication. Added SecurityConfiguration. Added model and some repositories.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=backend-personal-fitness-tracker
+server.servlet.context-path=/api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/PFT_DB
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=pft_admin
+spring.datasource.password=pft_password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+public.key.location=/home/lyca2206/Documents/Code Repositories/backend-personal-fitness-tracker/src/main/resources/public.key
+private.key.location=/home/lyca2206/Documents/Code Repositories/backend-personal-fitness-tracker/src/main/resources/private.key
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8080/api
