--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ public.key.location=/home/lyca2206/Documents/Code Repositories/backend-personal-
 private.key.location=/home/lyca2206/Documents/Code Repositories/backend-personal-fitness-tracker/src/main/resources/private.key
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8080/api
+
+server.error.include-message=always
