--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.password=pft_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-public.key.location=/home/lyca2206/Documents/Code Repositories/backend-personal-fitness-tracker/src/main/resources/public.key
-private.key.location=/home/lyca2206/Documents/Code Repositories/backend-personal-fitness-tracker/src/main/resources/private.key
+public.key.location=./src/main/resources/public.key
+private.key.location=./src/main/resources/private.key
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8080/api
 
